# tuple_utils

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Documentation/html/: annotated.html  cartesian__product_8hpp.html  cartesian__product_8hpp_source.html  classes.html  files.html  fold__tuples_8hpp.html  fold__tuples_8hpp_source.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  indices_8hpp.html  indices_8hpp_source.html  main_8cpp.html  make__custom__tuple_8hpp.html  make__custom__tuple_8hpp_source.html  merge__tuples_8hpp.html  merge__tuples_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetuple__utils.html  namespacetuple__utils_1_1details.html  print__tuple_8hpp.html  print__tuple_8hpp_source.html  read__from__stream_8hpp.html  read__from__stream_8hpp_source.html  structTupleFromStream.html  structbuild__indices.html  structbuild__indices_3_010_01_4.html  structindices.html  structtuple__utils_1_1details_1_1c__product__type.html  (+31 more)
src/: CMakeLists.txt  cartesian_product.hpp  explode.hpp  fold_tuples.hpp  indices.hpp  make_custom_tuple.hpp  merge_tuples.hpp  print_tuple.hpp  read_from_stream.hpp  reverse.hpp  sequence.hpp  traits.hpp  zip_tuples.hpp
src/aux/: sequence.hpp  static.hpp  traits.hpp
tests/: CMakeLists.txt  test_cartesian_product.cpp  test_explode.cpp  test_fold_tuples.cpp  test_make_custom_tuple.cpp  test_merge_tuples.cpp  test_print_tuple.cpp  test_reverse.cpp  test_sequence.cpp  test_zip_tuples.cpp
(+41 files in other folders)
